<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

        <RelativeLayout
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent">


                    <EditText
                        android:id="@+id/your_name"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/comment_et_border"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:hint="@string/full_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                    <EditText
                        android:id="@+id/your_email"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/comment_et_border"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:hint="@string/email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>


                    <Spinner
                        android:id="@+id/your_problem"
                        android:layout_height="wrap_content"
                        android:prompt="@string/problem"
                        android:layout_width="match_parent"
                        android:entries="@array/feedbacktypelist">
                    </Spinner>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>


                    <EditText
                        android:id="@+id/your_message"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/comment_et_border"
                        android:padding="10dp"
                        android:maxLines="5"
                        android:hint="@string/your_comments"
                        android:layout_width="match_parent"
                        android:layout_height="120dp" />

                    <CheckBox
                        android:id="@+id/receive_email"
                        android:layout_height="wrap_content"
                        android:text="@string/getresponse"
                        android:layout_width="fill_parent">
                    </CheckBox>


                    <Button
                        android:id="@+id/send_message"
                        android:layout_height="wrap_content"
                        android:text="@string/send"
                        android:background="@drawable/btn_rounded_dark"
                        android:onClick="sendFeedback"
                        android:textColor="@color/white"
                        android:layout_width="fill_parent">
                    </Button>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

</androidx.core.widget.NestedScrollView>