<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.lestreaming.fragments.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="4dp"
                    app:cardBackgroundColor="@color/green_500"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tuto_title"
                            android:textStyle="bold"
                            android:textSize="20dp"
                            android:textColor="@color/white"
                            android:gravity="center_horizontal"/>
                        <View
                            style="@style/Divider" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_margin="10dp"
                            android:text="@string/tuto"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    style="@style/Divider" />

                <TextView
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/notifications"
                    android:textAppearance="@style/TextAppearance.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_margin="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:textSize="17sp"
                        android:layout_toLeftOf="@+id/notify_switch"
                        android:text="@string/push_notification"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/notify_switch"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:visibility="gone"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/theme"
                android:textAppearance="@style/TextAppearance.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_brightness_3_black_24dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="15dp"/>

                <TextView
                    android:id="@+id/name"
                    android:text="@string/dark_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/default_text"
                    android:layout_toRightOf="@+id/image"
                    />
                <Switch
                    android:id="@+id/theme_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"/>


            </RelativeLayout>

            <View
                style="@style/Divider" />

            <TextView
                android:padding="15dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/others"
                android:textAppearance="@style/TextAppearance.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:padding="5dp"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/contact_us"
                    android:textSize="15sp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/contact_email"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <View
                style="@style/Divider" />
            <LinearLayout
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/copyright"
                    android:textSize="15sp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:text="@string/copyright_text"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <View
                style="@style/Divider" />
            <LinearLayout
                android:layout_margin="10dp"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/version"
                    android:textSize="15sp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/app_version"
                    android:textSize="13sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <View
                style="@style/Divider" />

            <LinearLayout
                android:layout_margin="10dp"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_term"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:clickable="true"
                    android:text="Termes &amp; Conditions"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <View
                android:visibility="gone"
                style="@style/Divider" />

            <LinearLayout
                android:visibility="gone"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/feedback"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:clickable="true"
                    android:text="Feedback"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <View
                style="@style/Divider" />

            <LinearLayout
                android:id="@+id/share_layout"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingLeft="6dp"
                android:focusable="true">

                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:text="@string/share_this_app"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                style="@style/Divider" />




        </LinearLayout>
    </ScrollView>

</LinearLayout>