<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.lestreaming.ProfileActivity"
    tools:showIn="@layout/activity_profile_test">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <RelativeLayout style="@style/profileDetailsLayout">

            <LinearLayout
                android:id="@+id/favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rect_teal_outline"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_address"
                    android:layout_weight="1"
                    style="@style/profileDetailsImage"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:text="@string/my_fav"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_below="@id/favorite"
                android:background="@color/grey_20"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_height="wrap_content"
                android:text="@string/deactive_account_text"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:id="@+id/deactive_bt"
                android:layout_marginTop="5dp"
                android:layout_below="@id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rect_teal_outline"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_name"
                    android:layout_weight="1"
                    style="@style/profileDetailsImage"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:text="@string/deactivate_account"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>